dis should work now

--- a/config.json
+++ b/config.json
@@ -5,8 +5,8 @@
         "TerrificTable",
         "24hoster"
     ],
-    "logins": {
-        "username": "abc",
-        "password": "abc"
-    }
+    "logins": [
+        "abc",
+        "abc"
+    ]
 }
