--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
         "24hoster"
     ],
     "logins": [
-        "abc",
-        "abc"
+        "YOUR USERNAME/EMAIL HERE",
+        "YOUR PASSWORD HERE"
     ]
 }
